<resources>
    <string name="app_name">E-Commerce</string>
    <string name="hot_sale_icon">HotSale</string>
    <string name="contacts_text">Контакти</string>
    <string name="about_us_text">Про нас</string>
    <string name="m_act_text">Головна</string>
    <string name="app_logo_text1">Courses</string>
    <string name="app_logo_text2">App</string>
    <string name="filter_text">Filter</string>
    <string name="cat_lau_text">Category</string>
    <string name="cat_title_dump_text">Game</string>
    <string name="course_pick_text">CoursePick</string>
    <string name="start_course_date_header">Початок навчання:</string>
    <string name="course_level_header">Рівень:</string>
</resources>