<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBgColor"
    tools:context=".MainActivity">

<!-- aside menu widget-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="65dp"
        android:layout_height="0dp"
        android:background="@color/asideBgColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/hot_sale_icon_view"
            android:layout_width="51dp"
            android:layout_height="64dp"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/hot_sale_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/deal_hot" />

        <TextView
            android:id="@+id/contacts"
            android:layout_width="89dp"
            android:layout_height="145dp"
            android:layout_marginEnd="9dp"
            android:layout_marginBottom="95dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:rotation="-90"
            android:text="@string/contacts_text"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/hot_sale_icon_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/about_us"
            android:layout_width="89dp"
            android:layout_height="145dp"
            android:layout_marginEnd="9dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:rotation="-90"
            android:text="@string/about_us_text"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/contacts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/main_act"
            android:layout_width="89dp"
            android:layout_height="145dp"
            android:layout_marginEnd="9dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/black"
            android:gravity="center"
            android:rotation="-90"
            android:text="@string/m_act_text"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/about_us"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
<!---Main activiti laout  -->

    <TextView
        android:id="@+id/app_logo_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="37dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/app_logo_text1"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/app_logo_text2"
        android:layout_width="104dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/app_logo_text2"
        android:textColor="#EF5350"
        android:textSize="40sp"
        app:layout_constraintStart_toEndOf="@+id/app_logo_text1"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/filter_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/filter_text"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/app_logo_text1"
        app:srcCompat="@drawable/filter" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/categoryRecycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/filter_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/filter_view"
        app:layout_constraintTop_toTopOf="@+id/filter_view"
        tools:listitem="@layout/category_item" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/courseRecycler"
        android:layout_width="321dp"
        android:layout_height="485dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/categoryRecycler"
        tools:listitem="@layout/course_item" />

</androidx.constraintlayout.widget.ConstraintLayout>