<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="20dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/course_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:contentPaddingBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/course_pick"
                android:layout_width="211dp"
                android:layout_height="200dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/course_pick_text"
                android:transitionName="course_img"
                app:srcCompat="@drawable/java_logo" />

            <TextView
                android:id="@+id/course_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat_bold"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:text="@string/course_pick_text">
            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:fontFamily="@font/montserrat"
                    android:textSize="15sp"
                    android:layout_margin="10dp"
                    android:text="@string/start_course_date_header"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:fontFamily="@font/montserrat"
                    android:textSize="15sp"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/course_level_header"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/course_date"
                    android:layout_width="101dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/start_course_date_header"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/course_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/course_level_header"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>






</androidx.constraintlayout.widget.ConstraintLayout>